--- a/Notification Service Extension/ar.lproj/Localizable.strings
+++ b/Notification Service Extension/ar.lproj/Localizable.strings
@@ -136,7 +136,7 @@
 /* Button title. Refers to discarding photo/video edits in media composer. */
 "media.button.discard" = "تجاهل";
 
-/* Push notification for a comment to message */
+/* Push notification for a reaction to comment */
 "notification.comment.reaction" = "تفاعل بإضافة %@ إلى تعليق";
 
 /* Push notification for a new comment. Parameter is the text of the comment */
